Make all language sections the same height, to fix the annoying misalignment issue.

--- a/PersonalWebsite/Styles/_styles_home.scss
+++ b/PersonalWebsite/Styles/_styles_home.scss
@@ -21,6 +21,7 @@
         @extend .background.primary.shade.three;
         //
         width: 290px;
+        height: 645px;
         //
         display: flex;
         flex-direction: column;
